Fix overflow advisors, and size

--- a/content.css
+++ b/content.css
@@ -87,21 +87,22 @@ h3 {
 .team_advisors {
     display:flex;
     flex-direction: row;
-    overflow: hidden;
+    flex-wrap: wrap;
 }
 
 .team_advisors_advisor {
     vertical-align: top;
     display: inline-block;
     text-align: center;
+    width: 12rem;
     margin-right: 1.2rem;
     padding: 10px;
     
 }
 
 .team_advisors_picture {
-    width: 15rem;
-    height: 15rem;
+    width: 11rem;
+    height: 11rem;
     border: 4px solid var(--color-9);
     border-radius: 50%;
     box-shadow: inset 0 0 0 6px rgba(0, 0, 0, 0.2), 0 0 5px 4px rgba(0, 0, 0, 0.19);
